--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
@@ -5,15 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6D41623A-7B9E-4DFA-8F2A-1B4EBEF7F990}</ProjectGuid>
+    <ProjectGuid>{7C9A434D-BC0E-4692-862D-56F57D39EFD6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NDDDSample.Infrastructure</RootNamespace>
-    <AssemblyName>NDDDSample.Infrastructure</AssemblyName>
+    <RootNamespace>NDDDSample.Interfaces.BookingRemoteService</RootNamespace>
+    <AssemblyName>NDDDSample.Interfaces.BookingRemoteService</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Properties\NDDDSample.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\log4net\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -51,20 +45,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\EqualsBuilder.cs" />
-    <Compile Include="Builders\HashCodeBuilder.cs" />
-    <Compile Include="Builders\ToStringBuilder.cs" />
-    <Compile Include="DateUtil.cs" />
-    <Compile Include="Log\ILog.cs" />
-    <Compile Include="Log\Log4NetLoggerProxy.cs" />
-    <Compile Include="Log\LogFactory.cs" />
+    <Compile Include="Assembler\CargoRoutingDTOAssembler.cs" />
+    <Compile Include="Assembler\ItineraryCandidateDTOAssembler.cs" />
+    <Compile Include="Assembler\LocationDTOAssembler.cs" />
+    <Compile Include="BookingServiceFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\DateTimeUtil.cs" />
-    <Compile Include="Utils\ListUtil.cs" />
-    <Compile Include="Validations\Validate.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\NDDDSample.snk" />
+    <ProjectReference Include="..\..\application\NDDDSample.Application\NDDDSample.Application.csproj">
+      <Project>{D9890BDD-C115-48F2-9A12-80A516A31ED0}</Project>
+      <Name>NDDDSample.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\domain\NDDDSample.Domain\NDDDSample.Domain.csproj">
+      <Project>{A57A3967-E613-4598-94FF-BD55711D4CAD}</Project>
+      <Name>NDDDSample.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\infrastructure\NDDDSample.Infrastructure\NDDDSample.Infrastructure.csproj">
+      <Project>{6D41623A-7B9E-4DFA-8F2A-1B4EBEF7F990}</Project>
+      <Name>NDDDSample.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NDDDSample.Interfaces\NDDDSample.Interfaces.BookingRemoteService.Common.csproj">
+      <Project>{BDA5AFA5-0114-4C4C-989E-29457FAA4FDF}</Project>
+      <Name>NDDDSample.Interfaces.BookingRemoteService.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
