--- a/src/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
+++ b/src/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
@@ -5,15 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6D41623A-7B9E-4DFA-8F2A-1B4EBEF7F990}</ProjectGuid>
+    <ProjectGuid>{CA4C3E92-0FBC-4305-BD7C-D546FEAAA5D7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NDDDSample.Infrastructure</RootNamespace>
-    <AssemblyName>NDDDSample.Infrastructure</AssemblyName>
+    <RootNamespace>NDDDSample.Web.Controllers</RootNamespace>
+    <AssemblyName>NDDDSample.Web.Controllers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Properties\NDDDSample.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,12 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\log4net\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Abstractions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\Microsoft ASP.NET\ASP.NET MVC Beta\Assemblies\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Routing">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml.Linq">
@@ -51,20 +57,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\EqualsBuilder.cs" />
-    <Compile Include="Builders\HashCodeBuilder.cs" />
-    <Compile Include="Builders\ToStringBuilder.cs" />
-    <Compile Include="DateUtil.cs" />
-    <Compile Include="Log\ILog.cs" />
-    <Compile Include="Log\Log4NetLoggerProxy.cs" />
-    <Compile Include="Log\LogFactory.cs" />
+    <Compile Include="MessageSource.cs" />
+    <Compile Include="Tracking\CargoTrackingViewAdapter.cs" />
+    <Compile Include="HomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\DateTimeUtil.cs" />
-    <Compile Include="Utils\ListUtil.cs" />
-    <Compile Include="Validations\Validate.cs" />
+    <Compile Include="Tracking\CargoTrackingController.cs" />
+    <Compile Include="Tracking\HandlingEventViewAdapter.cs" />
+    <Compile Include="Tracking\TrackCommand.cs" />
+    <Compile Include="Tracking\TrackCommandBinder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\NDDDSample.snk" />
+    <ProjectReference Include="..\..\application\NDDDSample.Application\NDDDSample.Application.csproj">
+      <Project>{D9890BDD-C115-48F2-9A12-80A516A31ED0}</Project>
+      <Name>NDDDSample.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\domain\NDDDSample.Domain\NDDDSample.Domain.csproj">
+      <Project>{A57A3967-E613-4598-94FF-BD55711D4CAD}</Project>
+      <Name>NDDDSample.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\infrastructure\NDDDSample.Infrastructure\NDDDSample.Infrastructure.csproj">
+      <Project>{6D41623A-7B9E-4DFA-8F2A-1B4EBEF7F990}</Project>
+      <Name>NDDDSample.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
