--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Common/NDDDSample.Interfaces.BookingRemoteService.Common.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Common/NDDDSample.Interfaces.BookingRemoteService.Common.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7C9A434D-BC0E-4692-862D-56F57D39EFD6}</ProjectGuid>
+    <ProjectGuid>{B293706A-1955-4A51-9E87-E7F03FB3728B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NDDDSample.Interfaces.BookingRemoteService</RootNamespace>
-    <AssemblyName>NDDDSample.Interfaces.BookingRemoteService</AssemblyName>
+    <RootNamespace>NDDDSample.Interfaces.BookingRemoteService.Common</RootNamespace>
+    <AssemblyName>NDDDSample.Interfaces.BookingRemoteService.Common</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,6 +35,12 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -45,17 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assembler\CargoRoutingDTOAssembler.cs" />
-    <Compile Include="Assembler\ItineraryCandidateDTOAssembler.cs" />
-    <Compile Include="Assembler\LocationDTOAssembler.cs" />
-    <Compile Include="BookingServiceFacade.cs" />
+    <Compile Include="Dto\CargoRoutingDTO.cs" />
+    <Compile Include="Dto\LegDTO.cs" />
+    <Compile Include="Dto\LocationDTO.cs" />
+    <Compile Include="Dto\RouteCandidateDTO.cs" />
+    <Compile Include="IBookingServiceFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\application\NDDDSample.Application\NDDDSample.Application.csproj">
-      <Project>{D9890BDD-C115-48F2-9A12-80A516A31ED0}</Project>
-      <Name>NDDDSample.Application</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\domain\NDDDSample.Domain\NDDDSample.Domain.csproj">
       <Project>{A57A3967-E613-4598-94FF-BD55711D4CAD}</Project>
       <Name>NDDDSample.Domain</Name>
@@ -63,10 +66,6 @@
     <ProjectReference Include="..\..\infrastructure\NDDDSample.Infrastructure\NDDDSample.Infrastructure.csproj">
       <Project>{6D41623A-7B9E-4DFA-8F2A-1B4EBEF7F990}</Project>
       <Name>NDDDSample.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NDDDSample.Interfaces.BookingRemoteService.Common\NDDDSample.Interfaces.BookingRemoteService.Common.csproj">
-      <Project>{B293706A-1955-4A51-9E87-E7F03FB3728B}</Project>
-      <Name>NDDDSample.Interfaces.BookingRemoteService.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
