--- a/src/app/presentation/NDDDSample.Web/Web.config
+++ b/src/app/presentation/NDDDSample.Web/Web.config
@@ -25,6 +25,18 @@
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:8080/BookingServiceFacade"
+        binding="netTcpBinding"       
+        contract="NDDDSample.Interfaces.BookingRemoteService.Common.IBookingServiceFacade"
+        name="bookingRemoteClient">
+        
+      </endpoint>
+    </client>
+  </system.serviceModel>
+  
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
