Show Cargo View Implemented
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@82 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
+++ b/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
@@ -203,6 +203,13 @@
     <Compile Include="Views\CargoAdmin\List.aspx.designer.cs">
       <DependentUpon>List.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\CargoAdmin\Show.aspx.cs">
+      <DependentUpon>Show.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\CargoAdmin\Show.aspx.designer.cs">
+      <DependentUpon>Show.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\CargoTracking\Search.aspx.cs">
       <DependentUpon>Search.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -305,6 +312,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CargoAdmin\List.aspx" />
+    <Content Include="Views\CargoAdmin\Show.aspx" />
     <Content Include="Windsor.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
