--- a/src/app/presentation/NDDDSample.Web/Web.config
+++ b/src/app/presentation/NDDDSample.Web/Web.config
@@ -31,10 +31,20 @@
       <endpoint address="net.tcp://localhost:8080/BookingServiceFacade"
         binding="netTcpBinding"       
         contract="NDDDSample.Interfaces.BookingRemoteService.Common.IBookingServiceFacade"
-        name="bookingRemoteClient">
-        
-      </endpoint>
+        name="bookingRemoteClient" bindingConfiguration="bindingBookingServiceConfig">       
+      </endpoint>    
     </client>
+    
+    <bindings>
+      <netTcpBinding>
+        <binding name="bindingBookingServiceConfig" openTimeout="00:10"
+                 sendTimeout="00:10"
+                 receiveTimeout="02:00" >
+                                <!--For debug purpose-->          
+        </binding>
+        
+      </netTcpBinding>
+    </bindings>
   </system.serviceModel>
   
 	<system.web>
@@ -53,7 +63,7 @@
 				<add assembly="System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Data.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System.Data.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>       
 			</assemblies>
 		</compilation>
 		<!--
@@ -95,8 +105,11 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
     -->
-		<pages>
+		<pages   pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" 
+     pageBaseType="System.Web.Mvc.ViewPage, System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" 
+     userControlBaseType="System.Web.Mvc.ViewUserControl, System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
 			<controls>
+        <add assembly="System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" namespace="System.Web.Mvc" tagPrefix="mvc" />
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			</controls>
