--- a/src/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
+++ b/src/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
@@ -60,7 +60,10 @@
     <Compile Include="CargoAdmin\CargoAdminController.cs" />
     <Compile Include="CargoAdmin\LegCommand.cs" />
     <Compile Include="CargoAdmin\PickNewDestinationViewModel.cs" />
+    <Compile Include="CargoAdmin\RegistrationCommand.cs" />
+    <Compile Include="CargoAdmin\RegistrationFormViewModel.cs" />
     <Compile Include="CargoAdmin\SelectItineraryViewModel.cs" />
+    <Compile Include="CargoAdmin\RegistrationCommandBinder.cs" />
     <Compile Include="MessageSource.cs" />
     <Compile Include="Tracking\CargoTrackingViewAdapter.cs" />
     <Compile Include="HomeController.cs" />
