--- a/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
+++ b/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
@@ -268,6 +268,7 @@
   <ItemGroup>
     <Content Include="Views\CargoAdmin\List.aspx" />
     <Content Include="Views\CargoAdmin\PickNewDestination.aspx" />
+    <Content Include="Views\CargoAdmin\RegistrationForm.aspx" />
     <Content Include="Views\CargoAdmin\SelectItinerary.aspx" />
     <Content Include="Views\CargoAdmin\Show.aspx" />
     <Content Include="Windsor.config" />
