1. UI Design Improvements 2. Simple error managemnet on MVC and WCF host sides 3. Remove redundant classes from UI layer 4. and other small UI cleanups and improvements
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@86 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
@@ -35,6 +35,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
