--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Common/NDDDSample.Interfaces.BookingRemoteService.Common.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Common/NDDDSample.Interfaces.BookingRemoteService.Common.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Dto\LocationDTO.cs" />
     <Compile Include="Dto\RouteCandidateDTO.cs" />
     <Compile Include="IBookingServiceFacade.cs" />
+    <Compile Include="NDDDRemoteException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
