--- a/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
+++ b/src/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
@@ -172,33 +172,12 @@
     </Compile>
     <Compile Include="Initializers\NhInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Home\About.aspx.cs">
-      <DependentUpon>About.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Home\About.aspx.designer.cs">
-      <DependentUpon>About.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Views\Home\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Home\Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Shared\Error.aspx.cs">
-      <DependentUpon>Error.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Shared\Error.aspx.designer.cs">
-      <DependentUpon>Error.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Shared\LoginUserControl.ascx.cs">
-      <DependentUpon>LoginUserControl.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Shared\LoginUserControl.ascx.designer.cs">
-      <DependentUpon>LoginUserControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="Views\Shared\Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -219,10 +198,8 @@
     <Content Include="Scripts\MicrosoftAjax.debug.js" />
     <Content Include="Scripts\MicrosoftMvcAjax.js" />
     <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
-    <Content Include="Views\Home\About.aspx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Shared\Error.aspx" />
-    <Content Include="Views\Shared\LoginUserControl.ascx" />
     <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
@@ -266,6 +243,7 @@
     <Content Include="Views\CargoTracking\Search.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\tab_bg.jpg" />
     <Content Include="Views\CargoAdmin\List.aspx" />
     <Content Include="Views\CargoAdmin\PickNewDestination.aspx" />
     <Content Include="Views\CargoAdmin\RegistrationForm.aspx" />
