--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService/NDDDSample.Interfaces.BookingRemoteService.csproj
@@ -72,6 +72,11 @@
       <Name>NDDDSample.Interfaces.BookingRemoteService.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\NDDDSample.snk">
+      <Link>Properties\NDDDSample.snk</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
