--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/Windsor.config
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/Windsor.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>  
-  <components>      
+<configuration>
+  <facilities>
+    <facility id="wcf"
+          type="Castle.Facilities.WcfIntegration.WcfFacility,
+				        Castle.Facilities.WcfIntegration" />
+  </facilities>
+  <components>        
+    <component id="pathfinderRemoteFacade"
+       type="NDDDSample.Interfaces.PathfinderRemoteService.Common.IGraphTraversalService, NDDDSample.Interfaces.PathfinderRemoteService.Common"
+       wcfEndpointConfiguration="pathfinderRemoteClient">
+    </component>
+    
     <!-- Rhino commons -->
     <component id="nhibernate.repository"
        service ="Rhino.Commons.IRepository`1,
