--- a/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/App.config
+++ b/src/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/App.config
@@ -25,4 +25,24 @@
 
   </castle>
 -->
+
+  <system.serviceModel>
+    <client>     
+      <endpoint address="net.tcp://localhost:8082/GraphTraversalService"
+        binding="netTcpBinding"
+        contract="NDDDSample.Interfaces.PathfinderRemoteService.Common.IGraphTraversalService"
+        name="pathfinderRemoteClient" bindingConfiguration="bindingGraphTraversalServiceConfig">
+      </endpoint>
+    </client>
+
+    <bindings>
+      <netTcpBinding>        
+        <binding name="bindingGraphTraversalServiceConfig" openTimeout="00:10"
+                 sendTimeout="00:10"
+                 receiveTimeout="02:00" >
+          <!--For debug purpose-->
+        </binding>
+      </netTcpBinding>
+    </bindings>
+  </system.serviceModel>
 </configuration>
