--- a/src/app/interfaces/NDDDSample.Interfaces.PathfinderRemoteService.Common/NDDDSample.Interfaces.PathfinderRemoteService.Common.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces.PathfinderRemoteService.Common/NDDDSample.Interfaces.PathfinderRemoteService.Common.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -51,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IGraphTraversalService.cs" />
+    <Compile Include="NDDDRemotePathfinderException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransitEdge.cs" />
     <Compile Include="TransitPath.cs" />
