--- a/src/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
+++ b/src/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Log\ILog.cs" />
     <Compile Include="Log\Log4NetLoggerProxy.cs" />
     <Compile Include="Log\LogFactory.cs" />
+    <Compile Include="Messaging\IMessage.cs" />
+    <Compile Include="Messaging\IMessageBus.cs" />
+    <Compile Include="Messaging\IMessageHandler.cs" />
+    <Compile Include="Messaging\MessageBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeUtil.cs" />
     <Compile Include="Utils\ListUtil.cs" />
